refactored code Arrays.asList -> List.of